[package]
name = "keylight-toggle-gtk"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
glib = "0.21.5"
gtk = "0.18.2"
libappindicator = "0.9.0"
mdns-sd = "0.17.2"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt", "macros"] }
